2006-01-24  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-glib.c: Fixed the list_from_string function, which
	forgot to add back a ',' when it saw the escaping... Thanks Jan
	Schampera for the bug tracking which led to that so simple solution !

2006-01-24 Kilian Krause <kk@verfaction.de>

	* man/ekiga.1: Fix section in manpage

2006-01-23  Damien Sandras  <dsandras@gnome.org>
	
	* src/gui/main.cpp: Cleanup and Full Screen patch from Jan Schampera.

2006-01-22  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/urlhandler.cpp:
	Cleanup.

	* src/devices/videooutput.cpp:
	Cleanups.
	
	* src/endpoints/sip.cpp:
	Fixed lost messages problem.
	
	* src/gui/druid.cpp:
	Do not automatically run the NAT test if a NAT method is already 
	configured.

2006-01-22  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Applied patch from Snark to fix DBUS/SDL/GNOME being
	enabled when --disable is called.

2006-01-22  Damien Sandras  <dsandras@gnome.org>

	* lib/gui/gmlevelmeter.c:
	Fixed visual bug thanks to Jan Schampera.

2006-01-22  Damien Sandras  <dsandras@gnome.org>
	
	* lib/gui/gmconnectbutton.c src/gui/main.cpp:
	Various improvements from Jan Schampera <jan schampera web de>. Fixed 
	typo reported in #328125.

2006-01-21  Damien Sandras  <dsandras@gnome.org>
	
	* src/gui/main.cpp:
	Applied patch from Jan Schampera to fix incorrect state of the 
	preview button.

2006-01-21  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp: Use correct User Agent.

2006-01-21  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated to latest CVS NEWS (2006-01-21).

2006-01-21  Damien Sandras  <dsandras@gnome.org>

	* src/gui/main.cpp lib/gui/gmconnectbutton.c:
	Applied patch from Jan Schampera to fix incorrect state of the 
	connect button when hanging up.

2006-01-21  Damien Sandras  <dsandras@gnome.org>

	* src/devices/videooutput.cpp, src/devices/videooutput.h:
	Display the unique video stream by default, if only receiving or 